# CourseGen

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  USAGE_GUIDE.md  main.py  pyproject.toml  test_improvements.py
.claude/: settings.json
.claude/hooks/: steering-loop.sh
.claude/skills/code-review/: SKILL.md
docs/: README.md  tech-debt.md
docs/design-docs/: 2026-05-15-secret-custody.md  2026-06-06-reasoning-first.md  README.md
docs/exec-plans/: README.md
docs/exec-plans/active/: 2026-05-15-phase3-docker-deploy.md
docs/exec-plans/completed/: 2026-05-15-phase1-user-credentials.md  2026-05-15-phase2-user-id-isolation.md  2026-05-15-phase2.5-password-auth.md
examples/roadmaps/: metadata.json  python_data_science_en.json  react_beginner_zh_tw.json  web_fullstack_beginner_zh_tw.json
notebook/: student_test.ipynb  teacher_test.ipynb
scripts/: export_example_seeds.py  verify_examples.py
src/coursegen/: schemas.py
src/coursegen/agents/: content.py  critic.py  knowledge_search.py  roadmap.py
src/coursegen/db/: auth.py  crud.py  database.py  models.py  seed.py
src/coursegen/db/seeds/: example_01.json  example_02.json  example_03.json
src/coursegen/eval/: llm_judge.py  pipeline_metrics.py  run_eval.py  schemas.py  structural_checks.py
src/coursegen/prompts/: answer.py  content.py  examine.py  knowledge_synthesis.py  roadmap.py
src/coursegen/ui/: app.py  mockups.py
src/coursegen/ui/components/: content_renderer.py  example_banner.py  example_browser.py  history_sidebar.py  login_form.py  node_chat.py  node_detail.py  preferences_form.py  roadmap_visualizer.py
src/coursegen/ui/components/dag_frontend/: index.html
src/coursegen/ui/utils/: browser_storage.py  cost_tracker.py  example_loader.py  log_bridge.py  node_numbering.py  session_state.py  study_estimate.py
src/coursegen/utils/: content_cleaner.py  tavily_search.py
src/coursegen/workflows/: basic.py
tests/: test_content_type_registry.py  test_node_progress_persistence.py  test_study_estimate.py
