[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coursegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    "langfuse>=2.0.0",
    "langchain-openai>=0.0.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "langchain-community>=0.4.1",
    "tavily-python>=0.7.19",
    "streamlit>=1.30.0",
    "streamlit-agraph>=0.0.45",
    "streamlit-local-storage>=0.0.20",
    "pandas>=2.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
